--- a/css/styles.css
+++ b/css/styles.css
@@ -274,11 +274,11 @@ button {
 .mobile-contacts-link.current {
   color: #4d5ae5;
 }
-.soc-list {
+.mobile-soc-list {
   display: flex;
   gap: 40px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: row;
 }
 .icon-socials {
@@ -330,6 +330,7 @@ button {
     padding: 188px 0;
     min-width: 1158px;
     min-height: 600px;
+    max-width: 1440px;
   }
 }
 .hero-container {
@@ -424,9 +425,9 @@ button {
     justify-content: center;
     margin-bottom: 8px;
   }
-  .icon-feature {
+  /* .icon-feature {
     margin: auto;
-  }
+  } */
 }
 .feature-list {
   display: flex;
@@ -511,7 +512,7 @@ button {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
-  margin: 0 auto 72px auto;
+  margin-bottom: 72px;
 }
 .team-list {
   display: flex;
@@ -735,8 +736,13 @@ button {
 }
 @media screen and (min-width: 1158px) {
   .footer-container {
-    justify-content: space-between;
     gap: unset;
+  }
+  .footer-block:first-child {
+    margin-right: 120px;
+  }
+  .footer-subscribe {
+    margin-left: auto;
   }
 }
 .footer-logo {
@@ -775,6 +781,11 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+@media screen and (min-width: 1158px) {
+  .footer-text {
+    max-width: 264px;
+  }
 }
 .footer-social-head {
   color: #fff;
